--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "mean-loc8r",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node": "~10.14.2",
+    "npm": "~6.4.1"
+  },  
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
